2005-08-17  Nathaniel Smith  <njs@pobox.com>

	* lua.cc (dump_stack): New function.
	(Lua::fail): New method; use above.
	(get, get_fn, get_tab, get_str, get_num, get_bool, extract_str)
	(extract_int, extract_double, extract_bool, begin, next, pop): Use
	it, to give better logging.
	
2005-08-17  Nathaniel Smith  <njs@pobox.com>

	* Makefile.am (lib3rdparty_a_CFLAGS): Build 3rd party C code with
	-fexceptions.

2005-08-17  Matthew Gregan  <kinetik@orcon.net.nz>

	* win32/process.cc: Slightly smarter argv->cmdline munging.
	* std_hooks.lua: Merge hooks for TortoiseMerge (part of
	TortoiseSVN).

2005-08-17  Nathaniel Smith  <njs@pobox.com>

	* lua.cc (lua_hooks): Re-enable panic thrower, we no longer
	support Lua 4.

2005-08-16  Nathaniel Smith  <njs@pobox.com>

	* netsync.cc: Add more netsync todos.

2005-08-15  Nathaniel Smith  <njs@pobox.com>

	* tests/t_explicit_merge_with_anc.at: New test.
	* testsuite.at: Add it.

2005-08-15  Nathaniel Smith  <njs@pobox.com>

	* tests/t_log_brief.at: New test.
	* testsuite.at: Add it.

2005-08-15  Nathaniel Smith  <njs@pobox.com>

	* commands.cc (fcommit): Remove.  This command has never been
	documented, tested, or maintained; it also doesn't avoid the use
	of temporary files (which was supposed to be its purpose).  Has it
	ever actually been used...?
	
2005-08-15  Nathaniel Smith  <njs@pobox.com>

	* lua.cc (hook_init_attributes): Do more logging; use begin()
	instead of starting iteration by hand.

2005-08-15  Patrick Mauritz  <oxygene@studentenbude.ath.cx>

	* testsuite.at, tests/*.at: make testsuite less demanding:
	- QGREP() and QEGREP() provide a portable [e]grep -q
	- export FOO=bar -> FOO=bar; export FOO
	- tail -n $x -> TAIL($x) with appropriate macro

2005-08-15  Patrick Mauritz  <oxygene@studentenbude.ath.cx>

	* m4/typeof.m4: new test, looks if compiler knows the typeof()
	extension
	* configure.ac: use it
	* sanity.hh: use the test, and boost's abstraction over
	__PRETTY_FUNCTION__ and similar pseudo-macros
