@@ -9,6 +9,7 @@
 #include <signal.h>
 #include <unistd.h>
 #include <fcntl.h>
+#include <errno.h>
 
 #include <sstream>
 
@@ -48,7 +49,7 @@ bool is_executable(const char *path)
         struct stat s;
 
         int rc = stat(path, &s);
-        N(rc != -1, F("stat() error on file %s") % path);
+        N(rc != -1, F("error getting status of file %s: %s") % path % strerror(errno));
 
         return s.st_mode & S_IXUSR;
 }
@@ -57,15 +58,15 @@ int make_executable(const char *path)
 {
         mode_t mode;
         struct stat s;
-	int fd = open(path, O_RDWR);
-        N(fd != -1, F("open() error on file %s") % path);
+        int fd = open(path, O_RDWR);
+        N(fd != -1, F("error opening file %s: %s") % path % strerror(errno));
         if (fstat(fd, &s))
-	  return -1;
+          return -1;
         mode = s.st_mode;
         mode |= S_IXUSR|S_IXGRP|S_IXOTH;
         int ret = fchmod(fd, mode);
-        N(close(fd) == 0, F("close() error on file %s") % path);
-	return ret;
+        N(close(fd) == 0, F("error closing file %s: %s") % path % strerror(errno));
+        return ret;
 }
 
 pid_t process_spawn(const char * const argv[])
